# WS_TractorTrailer_zzy

src/in2ulv_bringup/: CMakeLists.txt  package.xml
src/in2ulv_bringup/config/: common_params.yaml
src/in2ulv_bringup/launch/: in2ulv_bringup.launch
src/in2ulv_bringup/launch/includes/: base.launch
src/in2ulv_bringup/param/: chassis_1_param.yaml  chassis_2_param.yaml  chassis_2_param_single.yaml  chassis_3_param.yaml  chassis_4_param.yaml  chassis_5_param.yaml  chassis_param.yaml
src/in2ulv_controller/: CMakeLists.txt  package.xml
src/in2ulv_controller/config/: PIDControl.cfg
src/in2ulv_controller/include/in2ulv_controller/: ChassisCmdGenerator.hpp  MotionProcessor.hpp
src/in2ulv_controller/src/: ChassisCmdGenerator.cpp  MotionProcessor.cpp  chassis_cmd_node.cpp  motion_node.cpp
src/in2ulv_cores/definitions_core/: CMakeLists.txt  package.xml
src/in2ulv_cores/defs_core/: CMakeLists.txt  package.xml
src/in2ulv_cores/msgs_core/: CMakeLists.txt  package.xml
src/in2ulv_cores/msgs_core/msg/: Drive_MCUEcoder_fb.msg  INSStdMsg.msg  InNavDev.msg  InNavDev_ConvData.msg  InNavDev_ImuData.msg  InNavDev_SatData.msg  Veh_Diag_fb.msg  ackermann_cmd.msg  angle_error.msg  angles.msg  bms_Infor.msg  bms_flag_Infor.msg  car_state.msg  ctrl_cmd.msg  ctrl_fb.msg  current_fb.msg  force_info.msg  ins570.msg  io_cmd.msg  io_fb.msg  lr_wheel_fb.msg  odo_fb.msg  remote_info.msg  rr_wheel_fb.msg  torque_cmd.msg  torque_fb.msg  vision_trailer.msg
src/in2ulv_cores/msgs_core/system/msg/: AlertMessage.msg  MonitoringMetric.msg
src/in2ulv_cores/supervisor_core/: CMakeLists.txt  package.xml
src/in2ulv_cores/supervisor_core/config/: interfaces.yaml
src/in2ulv_cores/supervisor_core/include/supervisor_core/: CentralMonitor.hpp  InterfaceContract.hpp  MonitoringAgent.hpp
src/in2ulv_cores/supervisor_core/src/: CentralMonitor.cpp  InterfaceContract.cpp  MonitoringAgent.cpp  supervisor_node.cpp
src/in2ulv_cores/supervisor_core/web_ui/: web_server.py
src/in2ulv_cores/supervisor_core/web_ui/static/css/: style.css
src/in2ulv_cores/supervisor_core/web_ui/static/js/: app.js
src/in2ulv_cores/supervisor_core/web_ui/templates/: index.html
src/in2ulv_cores/utils_core/: CMakeLists.txt  package.xml
src/in2ulv_cores/utils_core/include/utils_core/: angle_utils.hpp  automotive_pid.hpp  filter.hpp  modbus_crc.hpp  ros_utils.hpp  spline_interpolator.hpp
src/in2ulv_cores/utils_core/src/: automotive_pid.cpp  filter.cpp  modbus_crc.cpp  ros_utils.cpp  spline_interpolator.cpp
src/in2ulv_drivers/chassis_driver/: CMakeLists.txt  package.xml
src/in2ulv_drivers/chassis_driver/include/chassis_driver/: ChassisController.hpp
src/in2ulv_drivers/chassis_driver/src/: ChassisController.cpp  chassis_node.cpp
src/in2ulv_drivers/force_sensor_driver/: CMakeLists.txt  package.xml
src/in2ulv_drivers/force_sensor_driver/include/force_sensor_driver/: ForceSensorController.hpp
src/in2ulv_drivers/force_sensor_driver/src/: ForceSensorController.cpp  force_sensor_node.cpp
src/in2ulv_drivers/remote_driver/: CMakeLists.txt  package.xml
src/in2ulv_drivers/remote_driver/include/remote_driver/: ActuatorController.hpp  RemoteController.hpp
src/in2ulv_drivers/remote_driver/src/: ActuatorController.cpp  RemoteController.cpp  remote_node.cpp
